# vogelsang_science_reply

./: .gitignore  README.md  pyproject.toml
data/processed_data/: additional_measures.csv  experiment1_all_data.csv
scripts/: generalised_mixed_effects_models.Rmd  mixed_effects_logistic_regression.Rmd  transformation_plus_ttest.ipynb
